--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.66", features = ["backtrace"] }
 byteorder = "1.4.3"
+clap = {version = "4.0.29", features = ["derive"] }
+memmap = "0.7.0"
 tempfile = "3.3.0"
 
 [dev-dependencies]
