--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tempfile = "3.3.0"
 
 [dev-dependencies]
 criterion = "0.3"
+rand = { version = "0.8.5", features = ["small_rng"] }
 
 [[bench]]
 name = "my_benchmark"
